заготовочки удаления проектов, моих работ, документов. (пока без сохранения выбранных фильтров). редактирование работ в модалке - тоже заготовочка

--- a/TranslationReg/Views/DocStages/Delete.cshtml
+++ b/TranslationReg/Views/DocStages/Delete.cshtml
@@ -3,7 +3,7 @@
     <div class="modal-content">
 
         <!-- Хедер -->
-        <div class="modal-header">
+        <div class="modal-header delete-header">
             <h4 class="modal-title">Удаление стадии "@Model.WorkType.Name"</h4>
             <p type="button" class="close" data-dismiss="modal">&times;</p>
         </div>
@@ -11,25 +11,25 @@
         <!-- Тело -->
         <div class="modal-body">
             <h3>Вы уверены, что хотите удалить данную запись?</h3>
-            <div class="del-row">
-                <div class="del-property"><p>Тип работ:</p></div>
-                <div class="del-value">
+            <div class="modal-row">
+                <div class="modal-property"><p>Тип работ:</p></div>
+                <div class="modal-value">
                     <p>@Model.WorkType.Name</p>
                 </div>
             </div>
-            <div class="del-row">
-                <div class="del-property"><p>Документ:</p></div>
-                <div class="del-value">
+            <div class="modal-row">
+                <div class="modal-property"><p>Документ:</p></div>
+                <div class="modal-value">
                     <p>@Model.Document.Name<p>
                 </div>
             </div>
             @{
                 var stages = Model.User_Stage.ToList();
-                <div class="del-row">
-                    <div class="del-property">
+                <div class="modal-row">
+                    <div class="modal-property">
                         <p>Количество работ:</p>
                     </div>
-                    <div class="del-value">
+                    <div class="modal-value">
                         @if (stages.Count > 0)
                         {
                             <p>@stages.Count</p>
