--- a/TranslationReg/Views/User_Stage/MyTasks.cshtml
+++ b/TranslationReg/Views/User_Stage/MyTasks.cshtml
@@ -18,89 +18,7 @@
     </ul>
 </div>
 
-<div class="tableMaterial">
-    <div class="titles">
-        <div class="col-md-2">Проект</div>
-        <div class="col-md-2">Документ</div>
-        <div class="col-md-1">Оригинал</div>
-        <div class="col-md-3">Комментарий</div>
-        <div class="col-md-1">Объем</div>
-        <div class="col-md-1">Дедлайн</div>
-        <div class="col-md-1">Результат</div>
-        <div class="col-md-1">Команды</div>
-    </div>
-
-    <div>
-        @foreach (var userStage in Model)
-        {
-            <div class="properties">
-
-                <!-- Проект -->
-                <div class="col-md-2">
-                    <a class="titleLink" href="/Projects/Project/@(userStage.Stage.Document.Project.Id)">
-                        @userStage.Stage.Document.Project.Name
-                    </a>
-                </div>
-
-                <!-- Документ -->
-                <div class="col-md-2">
-                    <a class="titleLink" href="/Documents/DocAndStages/@(userStage.Stage.Document.Id)">
-                        @userStage.Stage.Document.Name
-                    </a>
-                </div>
-
-                <!-- Оригинал -->
-                <div class="col-md-1">
-                    <span class="icon-container">
-                        <a href="@Url.Action("Download", "Documents", new { @filepath = userStage.Stage.Original.Path })">
-                            <i class="material-icons right-icon">file_download</i>
-                        </a>
-                    </span>
-                </div>
-
-                <!-- Комментарий -->
-                <div class="col-md-3">
-                    <span>
-                        @Html.DisplayFor(modelItem => userStage.Comment)
-                    </span>
-                </div>
-
-                <!-- Объем -->
-                <div class="col-md-1">
-                    <span>
-                        @Html.DisplayFor(modelItem => userStage.Amount)
-                    </span>
-                </div>
-
-                <!-- Дедлайн -->
-                <div class="col-md-1">
-                    <span>
-                        @userStage.Stage.Deadline
-                    </span>
-                </div>
-
-                <!-- Результат -->
-                <div class="col-md-1">
-                    <div class="icons-container">
-                        <a><i class="material-icons">file_upload</i></a>
-                    </div>
-                </div>
-
-                <!-- Команды -->
-                <div class="col-md-1">
-                    <div class="icons-container">
-                        <a href="/User_Stage/Edit/@userStage.Id">
-                            <i class="material-icons">mode_edit</i>
-                        </a>
-                        <a class="deleteBtn" data-href="/User_Stage/Delete/@userStage.Id">
-                            <i class="material-icons">delete</i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        }
-    </div>
-</div>
+@Html.Partial("List", Model)
 
 <script type="text/javascript">
     document.title = '@ViewBag.Title';
