--- a/TranslationReg/Views/Projects/Delete.cshtml
+++ b/TranslationReg/Views/Projects/Delete.cshtml
@@ -5,7 +5,7 @@
     <div class="modal-content">
 
         <!-- Хедер -->
-        <div class="modal-header">
+        <div class="modal-header  delete-header">
             <h4 class="modal-title">Удаление проекта "@Model.Name"</h4>
             <p type="button" class="close" data-dismiss="modal">&times;</p>
         </div>
@@ -13,21 +13,21 @@
         <!-- Тело -->
         <div class="modal-body">
             <h3>Вы уверены, что хотите удалить данную запись?</h3>
-            <div class="del-row">
-                <div class="del-property"><p>Название:</p></div>
-                <div class="del-value">
+            <div class="modal-row">
+                <div class="modal-property"><p>Название:</p></div>
+                <div class="modal-value">
                     <p>@Model.Name</p>
                 </div>
             </div>
-            <div class="del-row">
-                <div class="del-property"><p>Заказчик:</p></div>
-                <div class="del-value">
+            <div class="modal-row">
+                <div class="modal-property"><p>Заказчик:</p></div>
+                <div class="modal-value">
                     <p>@Model.Customer<p>
                 </div>
             </div>
-            <div class="del-row">
-                <div class="del-property"><p>Статус:</p></div>
-                <div class="del-value">
+            <div class="modal-row">
+                <div class="modal-property"><p>Статус:</p></div>
+                <div class="modal-value">
                     <p>@Model.ProjectStatus.Name<p>
                 </div>
             </div>
@@ -37,14 +37,14 @@
                 {
                     for (int i = 0; i < Model.Documents.Count && i < 3; i++)
                     {
-                        <div class="del-row">
-                            <div class="del-property">
+                        <div class="modal-row">
+                            <div class="modal-property">
                                 @if (i == 0)
                                 {
                                     <p>Докуметы:</p>
                                 }
                             </div>
-                            <div class="del-value">
+                            <div class="modal-value">
                                 @if (i == 2 && docs.Count > 3)
                                 {
                                     <p>@(docs[i].Name + " ...")</p>
@@ -64,10 +64,11 @@
 
         <!-- Подтверждение\отмена -->
         <div class="modal-footer">
-            @using (Html.BeginForm())
+            @using (Ajax.BeginForm("DeleteFromList", "Projects", new AjaxOptions { HttpMethod = "Post", UpdateTargetId = "partialContent" }))
             {
                 @Html.AntiForgeryToken()
-                <input type="submit" value="Удалить" class="btn btn-delete btn-modal" />
+                @Html.HiddenFor(x => x.Id)
+                <input type="submit" id="delProj" value="Удалить" class="btn btn-delete btn-modal"/>
             }
             <button type="button" class="btn btn-default btn-cancel btn-modal" data-dismiss="modal">Отмена</button>
         </div>
