--- a/TranslationReg/Views/Documents/CreateProjectDoc.cshtml
+++ b/TranslationReg/Views/Documents/CreateProjectDoc.cshtml
@@ -7,6 +7,11 @@
         @Html.HiddenFor(model => model.ProjectId)
 
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+         <div id="dropArea">
+            Перенесите файлы сюда
+        </div>
+        <h4>Загруженные файлы : </h4>
+        <ul class="list-group" id="uploadList"></ul>
         <div class="form-group">
             @Html.LabelFor(model => model.Name, "Название")
             @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", required = "required " } })
@@ -25,3 +30,34 @@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
+<script type="text/javascript">
+            $(function () {
+                $('#dropArea').filedrop({
+                    url: '@Url.Action("UploadFiles/" + Model.ProjectId)',
+                    allowedfiletypes: [],
+                    allowedfileextensions: [],
+                    paramname: 'files',
+                    maxfiles: 20,
+                    maxfilesize: 500, // in MB
+                    dragOver: function () {
+                        $('#dropArea').addClass('active-drop');
+                    },
+                    dragLeave: function () {
+                        $('#dropArea').removeClass('active-drop');
+                    },
+                    drop: function () {
+                        $('#dropArea').removeClass('active-drop');
+                    },
+                    afterAll: function (e) {
+                        $('#dropArea').html('Файлы успешно загружены');
+                    },
+                    uploadFinished: function (i, file, response, time) {
+                        $('#uploadList').append('<li class="list-group-item">' + file.name + '</li>')
+
+                    }
+
+
+                })
+
+            })
+</script>
