--- a/TranslationReg/Views/Documents/List.cshtml
+++ b/TranslationReg/Views/Documents/List.cshtml
@@ -53,7 +53,7 @@
                     <a href="/Documents/Edit/@document.Id">
                         <i class="material-icons">mode_edit</i>
                     </a>
-                    <a data-href="/Documents/Delete/@document.Id" class="deleteBtn" data-dialog-title="Удаление документа и работ">
+                    <a data-href="/Documents/Delete/@document.Id" class="loadModal" data-dialog-title="Удаление документа и работ">
                         <i class="material-icons">delete</i>
                     </a>
                 </div>
