--- a/TranslationReg/Views/LanguagePairs/Card.cshtml
+++ b/TranslationReg/Views/LanguagePairs/Card.cshtml
@@ -4,7 +4,7 @@
         <p>Языковая пара</p>
         <div>
             <i class="material-icons ajaxToggleCard card-btn" data-href="/LanguagePairs/EditCard/@Model.Id" data-ajax-update="#languagePair@(Model.Id)">mode_edit</i>
-            <i class="material-icons card-btn deleteBtn" data-href="/LanguagePairs/Delete/@Model.Id" data-dialog-title="Удаление языковой пары">delete</i>
+            <i class="material-icons card-btn loadModal" data-href="/LanguagePairs/Delete/@Model.Id" data-dialog-title="Удаление языковой пары">delete</i>
         </div>
     </div>
     <div class="card-content">
