--- a/TranslationReg/Views/Languages/Card.cshtml
+++ b/TranslationReg/Views/Languages/Card.cshtml
@@ -5,7 +5,7 @@
         <p>Язык</p>
         <div>
             <i class="material-icons ajaxToggleCard card-btn" data-ajax-update="#language@(Model.Id)" data-href="/Languages/EditCard/@Model.Id">mode_edit</i>
-            <i class="material-icons card-btn deleteBtn" data-href="/Languages/Delete/@Model.Id" data-dialog-title="Удаление языка">delete</i>
+            <i class="material-icons card-btn loadModal" data-href="/Languages/Delete/@Model.Id" data-dialog-title="Удаление языка">delete</i>
         </div>
     </div>
     <div class="card-content">
