--- a/TranslationReg/Views/Projects/Delete.cshtml
+++ b/TranslationReg/Views/Projects/Delete.cshtml
@@ -68,7 +68,7 @@
             {
                 @Html.AntiForgeryToken()
                 @Html.HiddenFor(x => x.Id)
-                <input type="submit" id="delProj" value="Удалить" class="btn btn-delete btn-modal"/>
+                <input type="submit" id="delProj" value="Удалить" class="btn btn-delete hide-modal btn-modal"/>
             }
             <button type="button" class="btn btn-default btn-cancel btn-modal" data-dismiss="modal">Отмена</button>
         </div>
