--- a/TranslationReg/Views/Projects/List.cshtml
+++ b/TranslationReg/Views/Projects/List.cshtml
@@ -49,7 +49,7 @@
                     <a href="/Projects/Edit/@project.Id">
                         <i class="material-icons">mode_edit</i>
                     </a>
-                    <a data-href="/Projects/Delete/@project.Id" class="deleteBtn" data-dialog-title="Удаление проекта и содержимого">
+                    <a data-href="/Projects/Delete/@project.Id" class="loadModal" data-dialog-title="Удаление проекта и содержимого">
                         <i class="material-icons">delete</i>
                     </a>
                 </div>
