--- a/TranslationReg/Views/UnitOfMeasure/Delete.cshtml
+++ b/TranslationReg/Views/UnitOfMeasure/Delete.cshtml
@@ -25,7 +25,7 @@
             @using (Html.BeginForm())
             {
                 @Html.AntiForgeryToken()
-                <input type="submit" value="Удалить" class="btn btn-delete btn-modal" />
+                <input type="submit" value="Удалить" class="btn btn-delete hide-modal btn-modal" />
             }
             <button type="button" class="btn btn-default btn-cancel btn-modal" data-dismiss="modal">Отмена</button>
         </div>
