--- a/TranslationReg/Style/style.css
+++ b/TranslationReg/Style/style.css
@@ -20,6 +20,11 @@ input,
 select,
 textarea {
     max-width: 280px;
+    height: 35px;
+    padding: 6px;
+    font-size: 18px;
+    border: none;
+    border-radius: 5px;
 }
 
 
