--- a/TranslationReg/Views/Documents/Delete.cshtml
+++ b/TranslationReg/Views/Documents/Delete.cshtml
@@ -53,12 +53,12 @@
 
         <!-- Подтверждение\отмена -->
         <div class="modal-footer">
-            @using (Ajax.BeginForm("DeleteFromList", "Documents", new AjaxOptions { HttpMethod = "Post", UpdateTargetId = "partialContent" }))
+            @using (Ajax.BeginForm("DeleteFromList", "Documents", new AjaxOptions { HttpMethod = "Post", UpdateTargetId = "partialContent"}))
             {
                 @Html.AntiForgeryToken()
                 @Html.HiddenFor(x => x.Id)
 
-                <input type="submit" value="Удалить" class="btn btn-delete btn-modal" />
+                <input type="submit" value="Удалить" class="btn btn-delete hide-modal btn-modal" />
             }
             <button type="button" class="btn btn-default btn-cancel btn-modal" data-dismiss="modal">Отмена</button>
         </div>
