--- a/TranslationReg/Views/ProjectStatuse/Card.cshtml
+++ b/TranslationReg/Views/ProjectStatuse/Card.cshtml
@@ -5,7 +5,7 @@
         <p>Статус проекта</p>
         <div>
             <i class="material-icons ajaxToggleCard card-btn" data-ajax-update="#projectStatuse@(Model.Id)" data-href="/ProjectStatuse/EditCard/@Model.Id">mode_edit</i>
-            <i class="material-icons card-btn deleteBtn" data-href="/ProjectStatuse/Delete/@Model.Id" data-dialog-title="Удаление типа работ">delete</i>
+            <i class="material-icons card-btn loadModal" data-href="/ProjectStatuse/Delete/@Model.Id" data-dialog-title="Удаление типа работ">delete</i>
         </div>
     </div>
     <div class="card-content">
