--- a/TranslationReg/Views/UnitOfMeasure/Card.cshtml
+++ b/TranslationReg/Views/UnitOfMeasure/Card.cshtml
@@ -6,7 +6,7 @@
         <p>Единица измерения</p>
         <div>
             <i class="material-icons ajaxToggleCard card-btn"data-ajax-update="#unitOfMeasure@(Model.Id)" data-href="/UnitOfMeasure/EditCard/@Model.Id">mode_edit</i>
-            <i class="material-icons card-btn deleteBtn" data-href="/UnitOfMeasure/Delete/@Model.Id" data-dialog-title="Удаление типа работ">delete</i>
+            <i class="material-icons card-btn loadModal" data-href="/UnitOfMeasure/Delete/@Model.Id" data-dialog-title="Удаление типа работ">delete</i>
         </div>
     </div>
 
