--- a/TranslationReg/Views/User_Stage/Edit.cshtml
+++ b/TranslationReg/Views/User_Stage/Edit.cshtml
@@ -25,12 +25,12 @@
                 <div class="modal-row">
                     <div class="modal-property"><p>Исполнитель:</p></div>
                     <div class="modal-value">
-                        @Html.DropDownList("UserId", Model.usersSelectList, new { htmlAttributes = new { @class = "form-control", required = "required" } })
+                        @Html.DropDownList("UserId", Model.usersSelectList, new { @class = "form-control", required = "required"})
                     </div>
                 </div>
 
                 <div class="modal-row">
-                    <div class="modal-property"><p>Количество:</p></div>
+                    <div class="modal-property"><p>Объем:</p></div>
                     <div class="modal-value">
                         <input class="form-control" type="number" required="required" min="1" max="100000" name="Amount" value="@Model.work.Amount" />
                     </div>
@@ -53,7 +53,7 @@
 
             <!-- Подтверждение\отмена -->
             <div class="modal-footer">
-                <input type="submit" value="Сохранить" class="btn btn-delete btn-modal" />
+                <input type="submit" value="Сохранить" class="btn hide-modal btn-modal" />
                 <button type="button" class="btn btn-default btn-cancel btn-modal" data-dismiss="modal">Отмена</button>
             </div>
         }
