Загрузка работ в моих задачах, правка сортировки списков

--- a/TranslationReg/Views/User_Stage/ListItem.cshtml
+++ b/TranslationReg/Views/User_Stage/ListItem.cshtml
@@ -47,7 +47,9 @@
     <!-- Результат -->
     <div class="col-md-1">
         <div class="icons-container">
-            <a><i class="material-icons">file_upload</i></a>
+            <a class="loadModal" data-href="/User_Stage/AddResultFile/@Model.Id">
+                <i class="material-icons">file_upload</i>
+            </a>
         </div>
     </div>
 
